--- a/eccom/templates/registration/login.html
+++ b/eccom/templates/registration/login.html
@@ -13,10 +13,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
 		<!-- MATERIAL DESIGN ICONIC FONT -->
-		<link rel="stylesheet" href="/static/fonts/material-design-iconic-font/css/material-design-iconic-font.min.css">
+		<link rel="stylesheet" href="/staticfiles/admin/fonts/material-design-iconic-font/css/material-design-iconic-font.min.css">
 
 		<!-- STYLE CSS -->
-		<link rel="stylesheet" href="/static/css/style2.css">
+		<link rel="stylesheet" href="/staticfiles/admin/css/style2.css">
 	</head>
 	<body>
      
